--- a/SignBarsTest/View/Base.lproj/Main.storyboard
+++ b/SignBarsTest/View/Base.lproj/Main.storyboard
@@ -8,10 +8,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Log In View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController modalPresentationStyle="fullScreen" id="BYZ-38-t0r" customClass="ViewController" customModule="SignBarsTest" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController modalPresentationStyle="fullScreen" id="BYZ-38-t0r" customClass="LogInViewController" customModule="SignBarsTest" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -126,9 +126,9 @@
                     </view>
                     <navigationItem key="navigationItem" id="bMQ-tp-WrV"/>
                     <connections>
-                        <outlet property="LogInBtn" destination="rc0-AZ-ROO" id="duQ-jI-OwX"/>
-                        <outlet property="emailTxt" destination="maf-to-gc6" id="y9k-Xa-F0k"/>
-                        <outlet property="passTxt" destination="x0Y-S2-t0d" id="qHL-yv-z0j"/>
+                        <outlet property="LogInBtn" destination="rc0-AZ-ROO" id="w7l-Ui-J3e"/>
+                        <outlet property="emailTxt" destination="maf-to-gc6" id="kcA-b4-5Xb"/>
+                        <outlet property="passTxt" destination="x0Y-S2-t0d" id="XoJ-OQ-vaN"/>
                         <segue destination="gVV-Im-w0r" kind="show" id="g4Y-db-sCr"/>
                     </connections>
                 </viewController>
